--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,6 @@
     <h1>Hola, mundo!</h1>
     <p>Última actualización: {{ fecha_actualizacion }}</p>
     <p>Última actualización: {{ fecha_actualizacion }}</p>
-    <p>Última actualización: ${{ fecha_actualizacion }}</p>
+    <p>Última actualización: {{ fecha_actualizacion }}</p>
 </body>
 </html>
