--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Hola, mundo!</h1>
-    <p>Última actualización: 0356 0353 0329 {{fecha_actualizacion}}</p>
+    <p>Última actualización: ya me voy a acostaar {{fecha_actualizacion}}</p>
     <p>Última actualización: {{ fecha_actualizacion }}</p>
     <p>Última actualización: {{ fecha_actualizacion }}</p>
 </body>
