--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,14 @@
     <p>Última actualización: ya me voy a acostaar {{fecha_actualizacion}}</p>
     <p>Última actualización: {{ fecha_actualizacion }}</p>
     <p>Última actualización: {{ fecha_actualizacion }}</p>
-</body>
+    <script src="{{ url_for('static', filename='js/archivosimple.js') }}"></script>
+    <script>
+      console.log("esto va bien pruebaotravez");
+      console.log(1967);
+      console.log(uno);
+   </script>
+
+
+
+   </body>
 </html>
