--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <script>
       console.log("esto va bien pruebaotravez");
       console.log(1967);
-      console.log(uno);
+      console.log(fecha_actualizacion);
    </script>
 
 
